load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//:__subpackages__"])

ng_ts_library(
    name = "Module000017",
    srcs = [
  "Module000017.module.ts",
  "my.000119.component.ts",
  "my.000120.component.ts",
  "my.000121.component.ts",
  "my.000122.component.ts",
  "my.000123.component.ts",
  "my.000124.component.ts",
  "my.000125.component.ts"
],
    angular_assets = [
  "my.000119.component.html",
  "my.000120.component.html",
  "my.000121.component.html",
  "my.000122.component.html",
  "my.000123.component.html",
  "my.000124.component.html",
  "my.000125.component.html"
],
    tsconfig = "//src:tsconfig.json",
    deps = [
      "@npm//@angular/core",
      "@npm//@angular/common",
  ],
)
