load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//:__subpackages__"])

ng_ts_library(
    name = "Module000019",
    srcs = [
  "Module000019.module.ts",
  "my.000133.component.ts",
  "my.000134.component.ts",
  "my.000135.component.ts",
  "my.000136.component.ts",
  "my.000137.component.ts",
  "my.000138.component.ts",
  "my.000139.component.ts"
],
    angular_assets = [
  "my.000133.component.html",
  "my.000134.component.html",
  "my.000135.component.html",
  "my.000136.component.html",
  "my.000137.component.html",
  "my.000138.component.html",
  "my.000139.component.html"
],
    tsconfig = "//src:tsconfig.json",
    deps = [
      "@npm//@angular/core",
      "@npm//@angular/common",
  ],
)
