load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//:__subpackages__"])

ng_ts_library(
    name = "Module000019",
    srcs = [
  "Module000019.module.ts",
  "my.000159.component.ts",
  "my.000160.component.ts",
  "my.000161.component.ts",
  "my.000162.component.ts",
  "my.000163.component.ts",
  "my.000164.component.ts",
  "my.000165.component.ts",
  "my.000166.component.ts"
],
    angular_assets = [
  "my.000159.component.html",
  "my.000160.component.html",
  "my.000161.component.html",
  "my.000162.component.html",
  "my.000163.component.html",
  "my.000164.component.html",
  "my.000165.component.html",
  "my.000166.component.html"
],
    tsconfig = "//src:tsconfig.json",
    deps = [
      "@npm//@angular/core",
      "@npm//@angular/common",
  ],
)
