load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//:__subpackages__"])

ng_ts_library(
    name = "Module000020",
    srcs = [
  "Module000020.module.ts",
  "my.000140.component.ts",
  "my.000141.component.ts",
  "my.000142.component.ts",
  "my.000143.component.ts",
  "my.000144.component.ts",
  "my.000145.component.ts",
  "my.000146.component.ts"
],
    angular_assets = [
  "my.000140.component.html",
  "my.000141.component.html",
  "my.000142.component.html",
  "my.000143.component.html",
  "my.000144.component.html",
  "my.000145.component.html",
  "my.000146.component.html"
],
    tsconfig = "//src:tsconfig.json",
    deps = [
      "@npm//@angular/core",
      "@npm//@angular/common",
  ],
)
