load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//:__subpackages__"])

ng_ts_library(
    name = "Module000021",
    srcs = [
  "Module000021.module.ts",
  "my.000131.component.ts",
  "my.000132.component.ts",
  "my.000133.component.ts",
  "my.000134.component.ts",
  "my.000135.component.ts",
  "my.000136.component.ts"
],
    angular_assets = [
  "my.000131.component.html",
  "my.000132.component.html",
  "my.000133.component.html",
  "my.000134.component.html",
  "my.000135.component.html",
  "my.000136.component.html"
],
    tsconfig = "//src:tsconfig.json",
    deps = [
      "@npm//@angular/core",
      "@npm//@angular/common",
  ],
)
