load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//:__subpackages__"])

ng_ts_library(
    name = "Module000022",
    srcs = [
  "Module000022.module.ts",
  "my.000154.component.ts",
  "my.000155.component.ts",
  "my.000156.component.ts",
  "my.000157.component.ts",
  "my.000158.component.ts",
  "my.000159.component.ts",
  "my.000160.component.ts"
],
    angular_assets = [
  "my.000154.component.html",
  "my.000155.component.html",
  "my.000156.component.html",
  "my.000157.component.html",
  "my.000158.component.html",
  "my.000159.component.html",
  "my.000160.component.html"
],
    tsconfig = "//src:tsconfig.json",
    deps = [
      "@npm//@angular/core",
      "@npm//@angular/common",
  ],
)
