load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//:__subpackages__"])

ng_ts_library(
    name = "Module000024",
    srcs = [
  "Module000024.module.ts",
  "my.000149.component.ts",
  "my.000150.component.ts",
  "my.000151.component.ts",
  "my.000152.component.ts",
  "my.000153.component.ts",
  "my.000154.component.ts"
],
    angular_assets = [
  "my.000149.component.html",
  "my.000150.component.html",
  "my.000151.component.html",
  "my.000152.component.html",
  "my.000153.component.html",
  "my.000154.component.html"
],
    tsconfig = "//src:tsconfig.json",
    deps = [
      "@npm//@angular/core",
      "@npm//@angular/common",
  ],
)
