load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//:__subpackages__"])

ng_ts_library(
    name = "Module000024",
    srcs = [
  "Module000024.module.ts",
  "my.000168.component.ts",
  "my.000169.component.ts",
  "my.000170.component.ts",
  "my.000171.component.ts",
  "my.000172.component.ts",
  "my.000173.component.ts",
  "my.000174.component.ts"
],
    angular_assets = [
  "my.000168.component.html",
  "my.000169.component.html",
  "my.000170.component.html",
  "my.000171.component.html",
  "my.000172.component.html",
  "my.000173.component.html",
  "my.000174.component.html"
],
    tsconfig = "//src:tsconfig.json",
    deps = [
      "@npm//@angular/core",
      "@npm//@angular/common",
  ],
)
