load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//:__subpackages__"])

ng_ts_library(
    name = "Module000024",
    srcs = [
  "Module000024.module.ts",
  "my.000199.component.ts",
  "my.000200.component.ts",
  "my.000201.component.ts",
  "my.000202.component.ts",
  "my.000203.component.ts",
  "my.000204.component.ts",
  "my.000205.component.ts",
  "my.000206.component.ts"
],
    angular_assets = [
  "my.000199.component.html",
  "my.000200.component.html",
  "my.000201.component.html",
  "my.000202.component.html",
  "my.000203.component.html",
  "my.000204.component.html",
  "my.000205.component.html",
  "my.000206.component.html"
],
    tsconfig = "//src:tsconfig.json",
    deps = [
      "@npm//@angular/core",
      "@npm//@angular/common",
  ],
)
