load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//:__subpackages__"])

ng_ts_library(
    name = "Module000025",
    srcs = [
  "Module000025.module.ts",
  "my.000175.component.ts",
  "my.000176.component.ts",
  "my.000177.component.ts",
  "my.000178.component.ts",
  "my.000179.component.ts",
  "my.000180.component.ts",
  "my.000181.component.ts"
],
    angular_assets = [
  "my.000175.component.html",
  "my.000176.component.html",
  "my.000177.component.html",
  "my.000178.component.html",
  "my.000179.component.html",
  "my.000180.component.html",
  "my.000181.component.html"
],
    tsconfig = "//src:tsconfig.json",
    deps = [
      "@npm//@angular/core",
      "@npm//@angular/common",
  ],
)
