load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//:__subpackages__"])

ng_ts_library(
    name = "Module000026",
    srcs = [
  "Module000026.module.ts",
  "my.000161.component.ts",
  "my.000162.component.ts",
  "my.000163.component.ts",
  "my.000164.component.ts",
  "my.000165.component.ts",
  "my.000166.component.ts"
],
    angular_assets = [
  "my.000161.component.html",
  "my.000162.component.html",
  "my.000163.component.html",
  "my.000164.component.html",
  "my.000165.component.html",
  "my.000166.component.html"
],
    tsconfig = "//src:tsconfig.json",
    deps = [
      "@npm//@angular/core",
      "@npm//@angular/common",
  ],
)
