load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//:__subpackages__"])

ng_ts_library(
    name = "Module000026",
    srcs = [
  "Module000026.module.ts",
  "my.000182.component.ts",
  "my.000183.component.ts",
  "my.000184.component.ts",
  "my.000185.component.ts",
  "my.000186.component.ts",
  "my.000187.component.ts",
  "my.000188.component.ts"
],
    angular_assets = [
  "my.000182.component.html",
  "my.000183.component.html",
  "my.000184.component.html",
  "my.000185.component.html",
  "my.000186.component.html",
  "my.000187.component.html",
  "my.000188.component.html"
],
    tsconfig = "//src:tsconfig.json",
    deps = [
      "@npm//@angular/core",
      "@npm//@angular/common",
  ],
)
