load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//:__subpackages__"])

ng_ts_library(
    name = "Module000028",
    srcs = [
  "Module000028.module.ts",
  "my.000173.component.ts",
  "my.000174.component.ts",
  "my.000175.component.ts",
  "my.000176.component.ts",
  "my.000177.component.ts",
  "my.000178.component.ts"
],
    angular_assets = [
  "my.000173.component.html",
  "my.000174.component.html",
  "my.000175.component.html",
  "my.000176.component.html",
  "my.000177.component.html",
  "my.000178.component.html"
],
    tsconfig = "//src:tsconfig.json",
    deps = [
      "@npm//@angular/core",
      "@npm//@angular/common",
  ],
)
